tests/cases/memory/errors/zone-scratch-expression.ari
fn main() -> i64 {
  zone::scratch<i64>(64, 5);
  return 0;
}
